--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: bioinforUsualPlot
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: selfboxplot
+Version: 1.0.0
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "ZJ",
+           family = "Ren",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "ren1448081850@gmail.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: What license it uses
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.0
+Suggests: 
+    testthat
