--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,9 @@ Authors@R:
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
+Imports: ggplot2,RColorBrewer,pheatmap,git2r
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Suggests: 
-    testthat
+    testthat (>= 2.1.0)
